--- a/index.html
+++ b/index.html
@@ -1,28 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
+    <title>ALURA START</title>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jhonatan</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-    <h1>O professor perfeito</h1>
-    <h2>Uma lenda no colegio gastao</h2>
-    <h3>Feitos bons do Jhonatan</h3>
-    <h4>É uma gente boa</h4>
-    <h4>Um professor incrivel</h4>
-    <h4>Aquele que nao faz flexao e sim empurra a terra para baixo</h4>
-    <h4>Lindo, cheiroso e maravilhoso</h4>
-    <p></p>
-    <h3>Feitos ruins</h3>
-    <h4>pega o celular</h4>
-    <table border="1">
-        <tr>
-            <td>primeira linha primeira coluna</td>
-
-
-        </tr>
-    </table>
+    
 </body>
 </html>
