--- a/Magi/inicio.html
+++ b/Magi/inicio.html
@@ -30,3 +30,18 @@ A turma mais famosa é a Segunda série F. Uma turma diversa e engajada, as veze
 </section>
 </body>
 </html>
+
+<section> class="Estudante">
+    <h2> class="titulo"
+
+    </h2>
+
+
+
+</section>
+
+
+
+
+
+</section>
