--- a/Magi/inicio.html
+++ b/Magi/inicio.html
@@ -24,7 +24,7 @@
             <p class="primeiro-paragrafo">
                 A escola Alura foi fundada em 2010 com objetivo de ensinar Pensamento Computacional através da programação.</p>
 <p class="segundo-paragrafo">
-A turma mais famosa é a Segunda série F. Uma turma diversa e engajada, as vezes, é um pouco bagunceira, mas que entrega execelente resultados</p>
+A turma mais famosa é a Segunda série F. Uma turma diversa e engajada, as vezes, é um pouco bagunceira, mas que entrega execelente resultados.</p>
 </div>
 <img src="Foto.png" alt="foto">
 </section>
@@ -32,9 +32,16 @@ A turma mais famosa é a Segunda série F. Uma turma diversa e engajada, as veze
 </html>
 
 <section> class="Estudante">
-    <h2> class="titulo"
-
+    <h2> class="titulo-estudantes"
+        Quem são os nossos estudantes:
     </h2>
+    <div class="estudante.div">
+        <img src="imagem.webp" alt="">
+
+
+
+
+    </div>
 
 
 
